Fix z-index header.css

--- a/styles/help.css
+++ b/styles/help.css
@@ -19,7 +19,7 @@ html {
     height: 100vh;
     width: 100%;
     overflow-x: hidden;
-    margin: 0;
+    margin: 0 !important;
 }
 
 .main-content::-webkit-scrollbar {
